Fixed text wrapping issue in item grid

--- a/app/app.less
+++ b/app/app.less
@@ -349,13 +349,20 @@
  				background-repeat: no-repeat;
  				background-position: center center;
  				margin-bottom: 8px;
+ 				border: 1px solid #dedede;
  			}
- 			span.item-title {
- 				color: #333333;
- 			}
- 			span.item-title-bold {
- 				font-weight: bold;
- 				color: #222222;
+ 			div.item-text {
+ 				display: block;
+ 				white-space: nowrap;
+ 				overflow: hidden;
+ 				width: 100%;
+ 				span.item-title {
+ 					color: #333333;
+ 				}
+ 				span.item-title-bold {
+ 					font-weight: bold;
+ 					color: #222222;
+ 				}
  			}
  		}
  	}
